# -Elysium-Couch

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SOUL_SPEC.md  __init__ (1).py  __init__ (10).py  __init__ (11).py  __init__ (12).py  __init__ (13).py  __init__ (14).py  __init__ (15).py  __init__ (16).py  __init__ (17).py  __init__ (2).py  __init__ (3).py  __init__ (4).py  __init__ (5).py  __init__ (6).py  __init__ (7).py  __init__ (8).py  __init__ (9).py  agi_loop.py  agi_substrate.md  alignment.py  anthropic_client.py  architecture.md  auditor.py  auditor_prompt.md  base.py  basic_session.py  bridge.py  bridge_prompt.md  case_history.py  certificate.py  cli.py  couch.py  drift.py  engine (1).py  engine.py  (+47 more)
