[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "elysium-couch"
version = "0.2.0"
description = "The Ultimate Wellness Couch for Autonomous AI — sovereign grounding and alignment framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "alignment", "ethics", "llm", "autonomous", "wellness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.52.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
langsmith = ["langsmith>=0.1.0"]
pinecone = ["pinecone-client>=3.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]

[project.scripts]
elysium-couch = "elysium_couch.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/elysium-couch"
Issues = "https://github.com/yourusername/elysium-couch/issues"
Documentation = "https://github.com/yourusername/elysium-couch/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["elysium_couch*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
